5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1595_842.log
== SUBMITION (2019-04-16 15:59:40) 
-- CODE:
#Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos"))
soma = 0 
while (var>0)
 resto = var%10
 var = var//10
soma = soma + resto
-- EXECUTION TIME:
0.214531
-- ERROR:
  File "/home/codebench/codes/1595/842/main.py", line 4
    while (var>0)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:59:44) 
-- CODE:
#Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos"))
soma = 0 
while (var>0)
 resto = var%10
 var = var//10
soma = soma + resto
-- EXECUTION TIME:
0.266843
-- ERROR:
  File "/home/codebench/codes/1595/842/main.py", line 4
    while (var>0)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:59:53) 
-- CODE:
#Leitura dos numeros digitados a partir do teclado:
var = int(input("Digite um numero com quatro algarismos"))
soma = 0 
while (var>0)
 resto = var % 10
 var = var//10
soma = soma + resto
-- EXECUTION TIME:
0.161561
-- ERROR:
  File "/home/codebench/codes/1595/842/main.py", line 4
    while (var>0)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
